--- a/StaffFrontend/Views/Product/Index.cshtml
+++ b/StaffFrontend/Views/Product/Index.cshtml
@@ -6,10 +6,26 @@
 
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <h1>Products</h1>
-
 <p>
     <a href="/products/new">Create New</a>
 </p>
+<hr />
+<form method="GET">
+    <dl class="row">
+        <dt class="col-sm-6">
+            <input class="form-control" type="text" name="name" placeholder="Product Name"/>
+        </dt>
+        <dt class="col-sm-2">
+            <input class="form-control" type="number" name="minprice" placeholder="Min Price"/>
+        </dt>
+        <dt class="col-sm-2">
+            <input class="form-control" type="number" name="maxprice" placeholder="Max Price"/>
+        </dt>
+        <dt class="col-sm-2">
+            <input class="btn btn-primary" type="submit" value="Set Filter" />
+        </dt>
+    </dl>
+</form>
 <table class="table table-dark">
     <thead>
         <tr>
